--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -69,9 +69,27 @@ hr {
 .down-arrow {
   position: absolute;
   bottom: 50px;
+  left: 50%;
+  margin-left: -10px;
   -webkit-animation: blink 0.5s ease-in-out infinite alternate;
   -moz-animation: blink 0.5s ease-in-out infinite alternate;
   animation: blink 0.5s ease-in-out infinite alternate;
+}
+@-webkit-keyframes blink {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-moz-keyframes blink {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 @keyframes blink {
   0% {
