--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,13 +1,118 @@
-.navbar-container {
+.navbar {
   background-color: white;
-  height: 7vh;
+  border-bottom: 2px solid #f2f2f2;
+  height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: row;
+  top: 0;
+  z-index: 999;
+  position: sticky;
+}
+
+.navbar-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60px;
+  max-width: 1500px;
+  font-family: "Raleway", Helvetica, Arial, sans-serif;
 }
 
 .navbar-logo {
   color: black;
+  justify-self: start;
+  margin-left: 20px;
+  cursor: pointer;
+  text-decoration: none;
   font-size: 25px;
+  font-weight: bold;
+}
+
+.nav-menu {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-gap: 10px;
+  list-style: none;
+  text-align: center;
+  width: 60vw;
+  justify-content: end;
+  margin-right: 16px;
+}
+
+.nav-item {
+  height: 60px;
+}
+
+.nav-links {
+  color: black;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  height: 100%;
+  padding: 10px 20px;
+}
+
+.nav-links:hover {
+  border-bottom: 4px solid black;
+  transition: all 0.2s ease-out;
+  font-weight: bold;
+}
+
+.menu-icon {
+  display: none;
+}
+
+@media screen and (max-width: 960px) {
+  .navbar-logo {
+    position: absolute;
+    left: 0;
+    top: 0;
+    transform: translate(50%, 50%);
+  }
+
+  .menu-icon {
+    display: block;
+    font-size: 25px;
+    cursor: pointer;
+    top: 0;
+    right: 0;
+    position: absolute;
+    transform: translate(-150%, 60%);
+  }
+
+  .nav-menu {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 95vh;
+    position: absolute;
+    top: 60px;
+    left: -100%;
+    opacity: 1;
+    transition: all 0.5s ease;
+  }
+
+  .nav-menu.active {
+    background: #fff;
+    left: 0;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1;
+  }
+
+  .nav-links {
+    text-align: center;
+    padding: 2rem;
+    width: 100%;
+    display: table;
+  }
+
+  .nav-links:hover {
+    border-bottom: none;
+    color: #ad9c00;
+    font-weight: bold;
+    border-bottom: 2px solid #ad9c00;
+    border-top: 2px solid #ad9c00;
+  }
 }
