--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -4,8 +4,12 @@
   height: 100vh;
   position: fixed;
   z-index: -1;
-  opacity: 0.7;
+  opacity: 0.8;
   margin-top: -10vh;
+}
+
+.backgrund-img.down {
+  opacity: 0.6;
 }
 
 .home-container {
@@ -19,18 +23,18 @@
 
 .home-container > h1 {
   color: #fff;
-  font-size: 60px;
+  font-size: 70px;
 }
 
 .home-container > p {
   color: #fff;
-  font-size: 22px;
+  font-size: 30px;
   margin-top: 20px;
 }
 
 @media screen and (max-width: 960px) {
   .home-container > h1 {
-    font-size: 50px;
+    font-size: 40px;
   }
 
   .home-container > p {
@@ -40,7 +44,7 @@
   }
 }
 
-hr {
+.home-container > hr {
   color: white;
   background-color: white;
   height: 1px;
