--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -12,7 +12,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 60px;
   max-width: 1500px;
   font-family: "Raleway", Helvetica, Arial, sans-serif;
 }
@@ -23,7 +22,7 @@
   margin-left: 20px;
   cursor: pointer;
   text-decoration: none;
-  font-size: 30px;
+  font-size: 35px;
   font-weight: bold;
 }
 
@@ -33,7 +32,7 @@
   margin-left: 20px;
   cursor: pointer;
   text-decoration: none;
-  font-size: 30px;
+  font-size: 35px;
   font-weight: bold;
 }
 
@@ -50,11 +49,13 @@
 
 .nav-item {
   height: 60px;
+  font-size: 25px;
   color: #fff;
 }
 
 .nav-item.down {
   height: 60px;
+  font-size: 25px;
   color: black;
 }
 
@@ -64,7 +65,7 @@
   text-decoration: none;
   height: 100%;
   padding: 10px 20px;
-  font-size: 20px;
+
   cursor: pointer;
 }
 
@@ -110,21 +111,23 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 95vh;
+    height: 100vh;
     position: absolute;
-    top: 60px;
+    top: 0;
     left: -100%;
     opacity: 1;
     transition: all 0.5s ease;
+    justify-content: center;
   }
 
   .nav-menu.active {
     background: #fff;
     left: 0;
-    opacity: 0.95;
+    opacity: 1;
     transition: all 0.5s ease;
     z-index: 1;
     display: flex;
+    justify-content: center;
   }
 
   .nav-links {
