--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -1,5 +1,6 @@
 .test2 {
-  background-color: blueviolet;
+  background-color: #1a1a1a;
+
   font-size: 50px;
   font-weight: bold;
   display: flex;
