--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,9 +1,23 @@
 .Home-container {
-  background-color: black;
+  background-color: #a4a4a4;
   height: 100vh;
-  color: white;
+  width: 100vw;
   /* text-align: center; */
   justify-content: center;
   align-items: center;
   display: flex;
+  position: absolute;
+  top: 0;
+}
+
+.container {
+  /* padding: 30px 30px; */
+}
+
+.text-box {
+  /* background-color: pink; */
+  /* width: 70vw; */
+  /* height: 40vh; */
+  /* border-radius: 40px; */
+  /* padding: 30px 30px; */
 }
