--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -1,9 +1,12 @@
 .Skills-container {
   background-color: yellow;
   height: 100vh;
-  color: black;
+  width: 100vw;
+  color: white;
   /* text-align: center; */
   justify-content: center;
   align-items: center;
   display: flex;
+  position: absolute;
+  top: 0;
 }
