--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -51,12 +51,12 @@
 }
 
 @media screen and (max-width: 960px) {
-  /* .navbar-logo {
+  .menu-logo {
     position: absolute;
     left: 0;
     top: 0;
     transform: translate(50%, 50%);
-  } */
+  }
 
   .menu-icon {
     display: block;
