--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -1,5 +1,5 @@
 .Skills-container {
-  background-color: yellow;
+  background-color: cornflowerblue;
   height: 100vh;
   width: 100vw;
   color: white;
