--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,12 +1,21 @@
-.About-container {
-  background-color: pink;
-  height: 100vh;
-  width: 100vw;
-  color: white;
-  /* text-align: center; */
-  justify-content: center;
-  align-items: center;
+.about-container {
+  height: 27vh;
   display: flex;
-  position: absolute;
-  top: 0;
+  flex-direction: row;
+  align-items: center;
+  border-bottom: 1px solid black;
+  padding: 0 10%;
+}
+
+.about-info {
+  display: flex;
+  /* margin-left: 50px; */
+}
+
+.about-info > img {
+  border-radius: 50%;
+}
+
+.user-info {
+  margin-left: 50px;
 }
