--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,105 +1,22 @@
-.navbar {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 999;
-  position: relative;
-  height: 10vh;
-}
-
 .navbar-container {
-  max-width: 1300px;
+  border-bottom: 1px solid var(--color--gray);
+  padding: 0 10%;
+  height: 7vh;
+}
+
+.navbar-items {
+  /* height: 7vh; */
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  font-family: "Raleway", Helvetica, Arial, sans-serif;
 }
 
-.menu-logo {
-  /* color: #fff; */
+li > span {
+  font-size: 30px;
+  font-family: "Rubik Mono One", sans-serif;
 }
 
-.nav-menu {
-  display: grid;
-  grid-template-columns: repeat(3, auto);
-  grid-gap: 20px;
-  list-style: none;
-  /* text-align: center; */
-  width: 80vw;
-  justify-content: end;
-  /* margin-right: 16px; */
-  color: white;
-}
-
-.nav-links {
-  /* display: flex; */
-  /* align-items: center; */
-  text-decoration: none;
-  /* height: 100%; */
-  /* padding: 10px 20px; */
-  cursor: pointer;
-  color: #242424;
-}
-
-.nav-links:hover {
+li:nth-child(2) {
+  color: #898989;
   font-weight: bold;
-}
-
-.menu-icon {
-  display: none;
-  cursor: pointer;
-}
-
-@media screen and (max-width: 960px) {
-  .menu-logo {
-    position: absolute;
-    left: 0;
-    top: 0;
-    transform: translate(50%, 50%);
-  }
-
-  .menu-icon {
-    display: block;
-    font-size: 30px;
-    cursor: pointer;
-    top: 0;
-    right: 0;
-    position: absolute;
-    transform: translate(-150%, 60%);
-  }
-
-  .nav-menu {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100vh;
-    position: absolute;
-    top: 0;
-    left: -100%;
-    opacity: 1;
-    transition: all 0.5s ease;
-    justify-content: center;
-  }
-
-  .nav-menu.active {
-    background: #fff;
-    left: 0;
-    opacity: 1;
-    transition: all 0.5s ease;
-    z-index: 1;
-    display: flex;
-    justify-content: center;
-  }
-
-  .nav-links {
-    color: #242424;
-    text-align: center;
-    padding: 2rem;
-    width: 100%;
-    display: table;
-  }
-
-  .nav-links:hover {
-    font-weight: bold;
-  }
 }
