--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -1,12 +1,5 @@
-.Skills-container {
-  background-color: cornflowerblue;
-  height: 100vh;
-  width: 100vw;
-  color: white;
-  /* text-align: center; */
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  position: absolute;
-  top: 0;
+.skills-container {
+  height: 53vh;
+  background-color: red;
+  padding: 0;
 }
