--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -3,3 +3,19 @@
   background-color: #f2f2f2;
   padding: 0;
 }
+
+.skills-item {
+  margin: 0 10%;
+}
+
+.skills-item > ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.skills-item > ul > li {
+  width: 280px;
+  height: 400px;
+  background-color: blueviolet;
+}
