Add Navbar Event

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 :root {
-  /* Color */
-  --color--gray: #d0d0d0;
+  /*Font Color */
+  --color--light--gray: #d0d0d0;
   --color--white: #fff;
 }
 
