--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,30 +1,34 @@
 .navbar-container {
   position: fixed;
-  top: 0;
-  border-bottom: 1px solid var(--color--gray);
+  transition: 0.7s;
+  left: 0%;
+  right: 0%;
+  /* padding: 0 15%; */
 }
 
 .nav-top-logo {
-  position: fixed;
-  font-family: "Rubik Mono One", sans-serif;
-  color: var(--color--gray);
-  font-size: 30px;
-  transition: 0.5s;
-}
-
-.navbar-items {
-  height: 6vh;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: center;
+  font-size: 50px;
+  margin: 10px 0px;
+  font-family: "Rubik Mono One", sans-serif;
+  color: #0079bd;
+  /* background-color: #bde7ff; */
+  min-width: 580px;
 }
 
 .logo {
-  font-size: 30px;
   font-family: "Rubik Mono One", sans-serif;
+  color: #0079bd;
+  font-size: 30px;
 }
 
-.item:nth-child(2) {
-  color: gray;
-  font-weight: bold;
+.navbar-items {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: auto;
+  grid-gap: 1em;
+  align-items: center;
+  text-align: center;
+  transition: 0.5s;
 }
