--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,39 +1,9 @@
 .about-container {
-  height: 28vh;
-  display: flex;
-  /* flex-direction: row; */
-  /* align-items: center; */
-  /* padding: 0 10%; */
+  /* margin-top: 150px; */
+  padding: 0 15%;
+  padding-top: 10%;
 }
 
 .about-info {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.about-info > img {
-  border-radius: 50%;
-}
-
-.user-info {
-  margin-left: 50px;
-}
-
-.user-name {
-  margin-bottom: 10px;
-}
-
-.icons {
-  display: flex;
-  margin-top: 10px;
-}
-
-.icon {
-  font-size: 20px;
-}
-
-.icon2 {
-  font-size: 30px;
 }
