--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,14 +1,30 @@
 .about-container {
   height: 100vh;
   position: relative;
+  /* background-color: #111111; */
 }
 
 .about-info {
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 80%;
   height: 80%;
   position: absolute;
-  top: 58%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.about-info > img {
+  border-radius: 50%;
+}
+
+.user-info {
+  /* margin-left: 30px; */
+  /* padding: 0 20px; */
+}
+
+.fab {
+  color: #386aa5;
 }
