--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,9 @@
   padding: 0;
 }
 
-.app {
+/* .app {
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 100px;
-}
+} */
