--- a/src/components/Animation-transition2/Project2.css
+++ b/src/components/Animation-transition2/Project2.css
@@ -1,3 +1,17 @@
+.imglist_ul {
+  font-size: 0;
+  width: 800px;
+  margin: 0;
+  padding: 10px;
+}
+
+.imglist_ul > li {
+  display: inline-block;
+  width: 33.3%;
+  vertical-align: top;
+  font-size: 12px;
+}
+
 a {
   display: block;
   width: auto;
