--- a/src/components/transition5/Project5.css
+++ b/src/components/transition5/Project5.css
@@ -9,6 +9,7 @@ input[type="radio"] + label {
   color: #999;
   font-size: 14px;
   cursor: pointer;
+  margin-right: 10px;
 }
 
 input[type="radio"]:checked + label {
