--- a/src/components/toy03/Toy03.css
+++ b/src/components/toy03/Toy03.css
@@ -1,11 +1,12 @@
 .wrap {
   margin: 0;
   padding: 0;
+  height: 2000px;
 }
 
 section {
   position: relative;
   width: 100%;
   height: 100vh;
-  background: #000;
+  background: url("https://placeimg.com/2000/1000/nature");
 }
