--- a/src/components/toy03/Toy03.css
+++ b/src/components/toy03/Toy03.css
@@ -1,12 +1,58 @@
-.wrap {
+* {
   margin: 0;
   padding: 0;
-  height: 2000px;
+  box-sizing: border-box;
+}
+
+body {
+  overflow: hidden;
 }
 
 section {
-  position: relative;
+  position: absolute;
   width: 100%;
   height: 100vh;
-  background: url("https://placeimg.com/2000/1000/nature");
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(to bottom, #ff4f8b, #dff1ff);
+}
+
+section::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50%;
+  z-index: 1;
+  backdrop-filter: blur(5px);
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+}
+
+section .color {
+  position: absolute;
+  filter: blur(150px);
+}
+
+section .color:nth-child(1) {
+  background: #ff359b;
+  width: 600px;
+  height: 600px;
+  top: -350px;
+}
+
+section .color:nth-child(2) {
+  background: #00d2ff;
+  width: 500px;
+  height: 500px;
+  bottom: -150px;
+  left: 100px;
+}
+
+section .color:nth-child(3) {
+  background: #fffd87;
+  width: 300px;
+  height: 300px;
+  bottom: 50px;
+  right: 0px;
 }
