Add new file click

--- a/src/components/Clone/Clone.html
+++ b/src/components/Clone/Clone.html
@@ -7,19 +7,29 @@
   <link rel="stylesheet" href="Clone.css">
 </head>
 <body>
-  <div class="navigation-container"></div>
-  <div class="menu menu-left">
-    <ul>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Skills</a></li>
-      <li><a href="#">Projects</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
+  <div class="navigation-container">
+    <div class="menu menu-left">
+      <ul>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Skills</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+
+    <div class="search-box menu-right">
+      <input type="search" placeholder="Search Something Here">
+    </div>
   </div>
 
-  <div class="search-box menu-right">
-    <input type="search" placeholder="Search Something Here">
+  <div class="slider-container">
+    <div class="slide-box">
+      <div class="slider-text">
+        <h6>W E B  D E V L O P E R</h6>
+        <h2>Sub Text</h2>
+        <p>p tag sub text somting</p>
+      </div>
+    </div>
   </div>
-
 </body>
 </html>
