--- a/src/components/Clock/Clock.html
+++ b/src/components/Clock/Clock.html
@@ -18,22 +18,22 @@
       <div class="sc" id="sc"></div>
     </div>
   </div>
-  <script type="text/javascript">
-    const deg = 6;
-    const hr = document.querySelector("#hr");
-    const mn = document.querySelector("#mn");
+	<script>
+		const deg = 6;
+		const hr = document.querySelector("#hr");
+		const mn = document.querySelector("#mn");
     const sc = document.querySelector("#sc");
-
-    setInterval(() => {
-      let day = new.Date();
-      let hh = day.getHours() * 30;
-      let mm = day.getMinutes() * deg;
+    
+		setInterval(() => {
+			let day = new Date();
+			let hh = day.getHours() * 30;
+			let mm = day.getMinutes() * deg;
       let ss = day.getSeconds() * deg;
-
-      hr.style.transform = `rotateZ(${(hh) + (mm/12)}deg)`;
-      mm.style.transform = `rotateZ(${mm}deg)`;
-      sc.style.transform = `rotateZ(${ss}deg)`;
-    })
-  </script>
+      
+			hr.style.transform = `rotateZ(${hh+(mm/12)}deg)`;
+			mn.style.transform = `rotateZ(${mm}deg)`;
+			sc.style.transform = `rotateZ(${ss}deg)`;
+		}, 1000);
+	</script>
 </body>
 </html>
