--- a/src/components/background/back.css
+++ b/src/components/background/back.css
@@ -6,5 +6,6 @@
 
 #back {
   height: 100vh;
-  background-image: url("/src/components/background/back.png");
+  width: 100vw;
+  background-image: url("back1.png");
 }
