--- a/src/components/background/back.css
+++ b/src/components/background/back.css
@@ -2,22 +2,30 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  /* background: #1F2328 */
-  background: #333;
+  background: #639CE2;
 }
 
-body {
-  height: 100vh;
+
+.rawp {
   width: 100vw;
 }
 
 #back {
-
   background-image: url("portfolio.png");
-  height: 500px;
-  width: 500px;
+  height: 400px;
+  width: 400px;
   background-size: cover;
   position: absolute;
   bottom: 0;
   right: 0;
+}
+
+.sub1 {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-size: 50px;
+  text-transform: uppercase;
 }
