--- a/src/components/background/back.html
+++ b/src/components/background/back.html
@@ -8,6 +8,9 @@
   <title>Document</title>
 </head>
 <body>
-  <div id="back"></div>
+  <div class="rawp">
+    <div id="back"></div>
+    <h1 class="sub1">web developer</h1>
+  </div>
 </body>
 </html>
