--- a/src/components/background/back.html
+++ b/src/components/background/back.html
@@ -11,6 +11,14 @@
   <div class="rawp">
     <div id="back"></div>
     <h1 class="sub1">web developer</h1>
+    <nav>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </nav>
   </div>
 </body>
 </html>
