--- a/src/components/background/back.html
+++ b/src/components/background/back.html
@@ -9,16 +9,16 @@
 </head>
 <body>
   <div class="rawp">
-    <div id="back"></div>
-    <h1 class="sub1">web developer</h1>
     <nav>
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>HOME</li>
+        <li>SKILLS</li>
+        <li>PROJECTS</li>
+        <li>CONTACT</li>
       </ul>
     </nav>
+    <div id="back"></div>
+    <h1 class="sub1">web developer</h1>
   </div>
 </body>
 </html>
